--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -97,8 +97,8 @@
 			<p class="alert_title">提示</p>
 			<div class="alert_body" id="close">确定要关机吗？确定之后矿机将停止挖矿</div>
 			<div class="alert_body" id="delete">
-				<div style="margin:0 25px;">确定要删除矿机吗？</div>
-				<div style="margin:8px 25px 0;">你可以选择数据是否清零</div>
+				<div style="margin:0 25px;">确定要删除矿机吗？删除后数据将清零</div>
+				<!--<div style="margin:8px 25px 0;">你可以选择数据是否清零</div>
 				<ul class="data_state">
 					<li class="zero">
 						<img src="../img/dataIcon.png" alt="" />
@@ -108,7 +108,7 @@
 						<img src="../img/dataIcon.png" alt="" />
 						<p>数据不清零</p>
 					</li>
-				</ul>
+				</ul>-->
 			</div>
 			<div class="alert_body" id="open">确定要开机吗？确定之后矿机将开始挖矿</div>
 			<div class="alert_body" id="deleteWallet">确定要解绑钱包吗？</div>
