--- a/users/tradeDetail.html
+++ b/users/tradeDetail.html
@@ -92,10 +92,9 @@
 				D = date.getDate()<10?'0'+date.getDate()+ ' ':date.getDate() + ' ';
 				h = date.getHours()<10?'0'+date.getHours()+ ':':date.getHours()+ ':';
 				m = date.getMinutes()<10?'0'+date.getMinutes()+ ':':date.getMinutes() + ':';
-				s = date.getSeconds()<10?'0'+date.getSeconds()+ ':':date.getSeconds(); 
+				s = date.getSeconds()<10?'0'+date.getSeconds()+ ':':date.getSeconds();
 				return Y+M+D+h+m+s;
-            } 
-			var timeData;
+            }
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
 				if(self.address == self.from) {
@@ -106,11 +105,7 @@
 				$("#tradeHash").html(self.thash);
 				$("#outAccount").html(self.tfrom);
 				$("#enterAccount").html(self.tto);
-				timeData = self.timestamp;
-				console.log(timeData);
-				timeData = formatDate(timeData);
-				console.log(timeData);
-				$("#time").html(timeData);
+				$("#time").html(formatDate(parseInt(self.ttimestamp)));
 			})
 		</script>
 	</body>
