--- a/public/version.html
+++ b/public/version.html
@@ -24,7 +24,7 @@
 			<!--描述-->
 			<p class="introduce" id="versionInfo">加载中...</p>
 			<!--复制地址去更新新版本---有新版本时-->
-			<div class="copy_box">
+			<div class="copy_box" style="display: none;">
 				<div class="address_box">
 					<div class="addressBox">https://www.dcar.xyz/downloads/index.html</div>
 					<input readonly="readonly" id="addressBox" value="https://www.dcar.xyz/downloads/index.html"/>
