--- a/users/tradeRecord.html
+++ b/users/tradeRecord.html
@@ -106,6 +106,7 @@
 					urlApi = api + "txs?page=" + page + '&pageSize=' + pageSize;
 				} else{
 					address = self.address; // all/each
+//					address = 'Dce188fb32aa429d09c6cc514d2180c4bc81cb36ca';
 					urlApi = tradeApi + "transactions/account/" + address + "?page="+ page + '&pageSize=' + pageSize;
 //					urlApi = tradeApi + "transactions/account/" + 'Dce188fb32aa429d09c6cc514d2180c4bc81cb36ca' + "?page="+ page + '&pageSize=' + pageSize;
 				}
