--- a/users/tradeDetail.html
+++ b/users/tradeDetail.html
@@ -97,14 +97,14 @@
             }
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
-				if(self.address == self.from) {
+				if(self.address == self.tfrom) {
 					$("#price").html("-" + self.tvalue);
-					$("#outAccount").html(self.tto);
-					$("#enterAccount").html(self.tfrom);
-				} else {
-					$("#price").html("+" + self.tvalue);
 					$("#outAccount").html(self.tfrom);
 					$("#enterAccount").html(self.tto);
+				} else {
+					$("#price").html("+" + self.tvalue);
+					$("#outAccount").html(self.tto);
+					$("#enterAccount").html(self.tfrom);
 				}
 				$("#tradeHash").html(self.thash);
 				$("#time").html(formatDate(parseInt(self.ttimestamp)));
