--- a/users/tradeDetail.html
+++ b/users/tradeDetail.html
@@ -92,7 +92,7 @@
 				D = date.getDate()<10?'0'+date.getDate()+ ' ':date.getDate() + ' ';
 				h = date.getHours()<10?'0'+date.getHours()+ ':':date.getHours()+ ':';
 				m = date.getMinutes()<10?'0'+date.getMinutes()+ ':':date.getMinutes() + ':';
-				s = date.getSeconds()<10?'0'+date.getSeconds()+ ':':date.getSeconds();
+				s = date.getSeconds()<10?'0'+date.getSeconds():date.getSeconds();
 				return Y+M+D+h+m+s;
             }
 			mui.plusReady(function() {
