--- a/users/minerCollect.html
+++ b/users/minerCollect.html
@@ -57,7 +57,7 @@
 				D = date.getDate()<10?'0'+date.getDate()+ ' ':date.getDate() + ' ';
 				h = date.getHours()<10?'0'+date.getHours()+ ':':date.getHours()+ ':';
 				m = date.getMinutes()<10?'0'+date.getMinutes()+ ':':date.getMinutes() + ':';
-				s = date.getSeconds()<10?'0'+date.getSeconds()+ ':':date.getSeconds(); 
+				s = date.getSeconds()<10?'0'+date.getSeconds():date.getSeconds(); 
 				return Y+M+D+h+m+s;
            }  
 			var page = 1; //第几页
@@ -65,7 +65,6 @@
 			var address;
 			var tradeData = []; 
 			var tradeList = '';
-			loadTradeLisy();
 			mui.plusReady(function() {
 				// 点击加载更多
 				$('.loading_box').on("click",function(){
@@ -79,124 +78,122 @@
 				});
 				var self = plus.webview.currentWebview();
 				address = self.address;
-			})
-			// 根据用户信息查看交易列表
-			function loadTradeLisy() {
-				tradeData = [];
-				tradeList = '';
-				mui.showLoading("加载中...", "div");
-				$.ajax({
-					type: "get",
-//					url: tradeApi + "profits/dce188fb32aa429d09c6cc514d2180c4bc81cb36ca?page=" + page + '&pageSize=' + pageSize,
-					url: tradeApi + "profits/" + address + "?page=" + page + '&pageSize=' + pageSize,
-					data: {},
-					beforeSend: function(xhr) {
-						xhr.setRequestHeader('x-requested-with', store.get("userInfo").token);
-					},
-					async: true,
-					success: function(ret) {
-						mui.hideLoading();
-						if(ret.success) {
-							mui.toast('加载成功');
-							tradeData = ret.data.list; // 交易列表
-							if(ret.data.list.length > 0) {
-								$("#no_data").hide();
-								$("#loading_box").show();
-								$.each(ret.data.list, function(i, t) {
-								tradeList += 
-									'<div class="each_trade">' +
-										'<div class="left_trade">' +
-											'<span>' + (pageSize*(page-1)+i+1) + '</span>' +
-										'</div>' +
-										'<div class="middle_trade">' +
-											'<div class="hash_num">' +
-												'<span>收益:</span>' +
-												t.value.toFixed(2) +
+				loadTradeLisy();
+				// 根据用户信息查看交易列表
+				function loadTradeLisy() {
+					tradeData = [];
+					tradeList = '';
+					mui.showLoading("加载中...", "div");
+					$.ajax({
+						type: "get",
+//						url: tradeApi + "profits/dc82afd9e56602db4f7a4b6639e1c8ecda39f6bab3?page=" + page + '&pageSize=' + pageSize,
+						url: tradeApi + "profits/" + address + "?page=" + page + '&pageSize=' + pageSize,
+						data: {},
+						async: true,
+						success: function(ret) {
+							mui.hideLoading();
+							if(ret.success) {
+								mui.toast('加载成功');
+								tradeData = ret.data.list; // 交易列表
+								if(ret.data.list.length > 0) {
+									$("#no_data").hide();
+									$("#loading_box").show();
+									$.each(ret.data.list, function(i, t) {
+									tradeList += 
+										'<div class="each_trade">' +
+											'<div class="left_trade">' +
+												'<span>' + (pageSize*(page-1)+i+1) + '</span>' +
 											'</div>' +
-											'<div class="trade_date">'+ formatDate(t.timestamp) +'</div>' +
-										'</div>' +    
-									'</div>';
-								})
-								$('#tadeMain').html(tradeList);
-							}else{
+											'<div class="middle_trade">' +
+												'<div class="hash_num">' +
+													'<span>收益:</span>' +
+													t.value.toFixed(2) +
+												'</div>' +
+												'<div class="trade_date">'+ formatDate(t.timestamp) +'</div>' +
+											'</div>' +    
+										'</div>';
+									})
+									$('#tadeMain').html(tradeList);
+								}else{
+									$("#loading_box").hide();
+									$("#no_data").show();
+								}
+								if ($(".each_trade").length >= ret.data.count){
+									$('.loading').html('已加载全部');
+								} else {
+									$('.loading').html('加载更多');
+								}
+							} else{
 								$("#loading_box").hide();
 								$("#no_data").show();
+								mui.toast(ret.msg);
 							}
-							if ($(".each_trade").length >= ret.data.count){
-								$('.loading').html('已加载全部');
-							} else {
-								$('.loading').html('加载更多');
-							}
-						} else{
-							$("#loading_box").hide();
+						},
+						error: function(error) {
 							$("#no_data").show();
-							mui.toast(ret.msg);
+							$("#loading_box").hide();
+							mui.hideLoading();
+							mui.toast(error.responseJSON.msg);
 						}
-					},
-					error: function(error) {
-						$("#no_data").show();
-						$("#loading_box").hide();
-						mui.hideLoading();
-						mui.toast(error.responseJSON.msg);
-					}
-				})
-			}
-			
-			// 加载更多
-			function loadingMore() {
-				tradeData = [];
-				tradeList = '';
-				mui.showLoading("加载中...", "div");
-				$.ajax({
-					type: "get",
-//					url: tradeApi + "profits/dce188fb32aa429d09c6cc514d2180c4bc81cb36ca?page=" + page + '&pageSize=' + pageSize,
-					url: tradeApi + "profits/" + address + "?page=" + page + '&pageSize=' + pageSize,
-					data: {},
-					beforeSend: function(xhr) {
-						xhr.setRequestHeader('x-requested-with', store.get("userInfo").token);
-					},
-					async: true,
-					success: function(ret) {
-						mui.hideLoading();
-						if(ret.success) {
-							mui.toast('加载成功');
-							tradeData = ret.data.list; // 交易列表
-							if(ret.data.list.length > 0) {
-								$.each(ret.data.list, function(i, t) {
-								tradeList += 
-									'<div class="each_trade">' +
-										'<div class="left_trade">' +
-											'<span>' + (pageSize*(page-1)+i+1) + '</span>' +
-										'</div>' +
-										'<div class="middle_trade">' +
-											'<div class="hash_num">' +
-												'<span>收益:</span>' +
-												t.value.toFixed(2) +
+					})
+				}
+				
+				// 加载更多
+				function loadingMore() {
+					tradeData = [];
+					tradeList = '';
+					mui.showLoading("加载中...", "div");
+					$.ajax({
+						type: "get",
+	//					url: tradeApi + "profits/dce188fb32aa429d09c6cc514d2180c4bc81cb36ca?page=" + page + '&pageSize=' + pageSize,
+						url: tradeApi + "profits/" + address + "?page=" + page + '&pageSize=' + pageSize,
+						data: {},
+						beforeSend: function(xhr) {
+							xhr.setRequestHeader('x-requested-with', store.get("userInfo").token);
+						},
+						async: true,
+						success: function(ret) {
+							mui.hideLoading();
+							if(ret.success) {
+								mui.toast('加载成功');
+								tradeData = ret.data.list; // 交易列表
+								if(ret.data.list.length > 0) {
+									$.each(ret.data.list, function(i, t) {
+									tradeList += 
+										'<div class="each_trade">' +
+											'<div class="left_trade">' +
+												'<span>' + (pageSize*(page-1)+i+1) + '</span>' +
 											'</div>' +
-											'<div class="trade_date">'+ formatDate(t.timestamp) +'</div>' +
-										'</div>' +    
-									'</div>';
-								})
+											'<div class="middle_trade">' +
+												'<div class="hash_num">' +
+													'<span>收益:</span>' +
+													t.value.toFixed(2) +
+												'</div>' +
+												'<div class="trade_date">'+ formatDate(t.timestamp) +'</div>' +
+											'</div>' +    
+										'</div>';
+									})
+								}
+								var minerList = document.body.querySelector('#tadeMain');
+								var Div = document.createElement('div');
+								Div.innerHTML = tradeList;
+								minerList.appendChild(Div);
+								if ($(".each_trade").length >= ret.data.count){
+									$('.loading').html('已加载全部');
+								} else {
+									$('.loading').html('加载更多');
+								}
+							} else{
+								mui.toast(ret.msg);
 							}
-							var minerList = document.body.querySelector('#tadeMain');
-							var Div = document.createElement('div');
-							Div.innerHTML = tradeList;
-							minerList.appendChild(Div);
-							if ($(".each_trade").length >= ret.data.count){
-								$('.loading').html('已加载全部');
-							} else {
-								$('.loading').html('加载更多');
-							}
-						} else{
-							mui.toast(ret.msg);
+						},
+						error: function(error) {
+							mui.hideLoading();
+							mui.toast(error.responseJSON.msg);
 						}
-					},
-					error: function(error) {
-						mui.hideLoading();
-						mui.toast(error.responseJSON.msg);
-					}
-				})
-			}
+					})
+				}
+			})
 		</script>
 	</body>
 
