--- a/public/login.html
+++ b/public/login.html
@@ -65,6 +65,7 @@
 					success: function(ret) {
 						mui.hideLoading();
 						if(ret.success) {
+							console.log(ret.data);
 							store.set('userInfo', ret.data);
 							mui.toast('登录成功');
 							var tiner = null;
