--- a/users/addOre.html
+++ b/users/addOre.html
@@ -124,7 +124,7 @@
 						success: function(ret) {
 							mui.hideLoading();
 							if(ret.success) {
-								mui.toast('绑定成功');
+								mui.toast('绑定指令已发送');
 								var timer = null;
 								clearTimeout(timer);
 								timer = setTimeout(function() {
