--- a/users/minerCollect.html
+++ b/users/minerCollect.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>交易记录</title>
+		<title>矿收记录</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/style.css" />
@@ -26,7 +26,7 @@
 			<h1 class="mui-title">矿收记录</h1>
 		</header>
 		<div class="mui-content">
-			<div class="no_data" id="no_data">暂无矿收记录</div>
+			<div class="no_data" id="no_data" style="display: none;">暂无矿收记录</div>
 			<div class="trade_body" id="tadeMain">
 				<!--<div class="each_trade">
 					<div class="left_trade">
@@ -66,6 +66,7 @@
 			var tradeData = []; 
 			var tradeList = '';
 			mui.plusReady(function() {
+				$('.loading').html('加载中...');
 				// 点击加载更多
 				$('.loading_box').on("click",function(){
 					if($('.loading').html() == '已加载全部'){
