--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -25,9 +25,9 @@
 					<span class="first_line">DCAR</span>
 				</p>
 				<!--<p class="third_line">
-					=
+					昨日收益
 					<span id="balanceCNY">0</span>
-					CNY
+					DCAR
 				</p>-->
 			</div>
 			<div class="miner_list" id="cart_list">
@@ -272,9 +272,11 @@
 			<p class="alert_title">详情</p >
 			<div class="mill_detail">
 				<p class="detail_title">收益 （DCAR/DAY）</p >
-				<div class="detail_main" id="seek_deatil_balance" style="padding-bottom: 21px;">999</div>
+				<div class="detail_main" id="seek_deatil_balance" style="padding-bottom: 21px;">加载中...</div>
+				<!--<p class="detail_title">今日收益 （DCAR/DAY）</p >
+				<div class="detail_main" id="day_detail_balance" style="padding-bottom: 21px;">加载中...</div>-->
 				<p class="detail_title">矿机地址</p >
-				<div class="detail_main" id="seek_deatil_address">ashkdhsdhashkdhsdhkashkdhsdhkashkdhsdhkk</div>
+				<div class="detail_main" id="seek_deatil_address">加载中...</div>
 			</div>
 			<div class="close_btn" onclick="detailConfirm()">关闭</div>
 		</div>
