--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -24,11 +24,11 @@
 					<span id="balance">0</span>
 					<span class="first_line">DCAR</span>
 				</p>
-				<!--<p class="third_line">
+				<p class="third_line">
 					昨日收益
 					<span id="balanceCNY">0</span>
 					DCAR
-				</p>-->
+				</p>
 			</div>
 			<div class="miner_list" id="cart_list">
 				<!--
@@ -271,10 +271,10 @@
 		<div class="mui-popover detail_box">
 			<p class="alert_title">详情</p >
 			<div class="mill_detail">
-				<p class="detail_title">收益 （DCAR/DAY）</p >
+				<p class="detail_title">历史收益 （DCAR/DAY）</p >
+				<div class="detail_main" id="history_detail_balance" style="padding-bottom: 21px;">加载中...</div>
+				<p class="detail_title">今日收益 （DCAR/DAY）</p >
 				<div class="detail_main" id="seek_deatil_balance" style="padding-bottom: 21px;">加载中...</div>
-				<!--<p class="detail_title">今日收益 （DCAR/DAY）</p >
-				<div class="detail_main" id="day_detail_balance" style="padding-bottom: 21px;">加载中...</div>-->
 				<p class="detail_title">矿机地址</p >
 				<div class="detail_main" id="seek_deatil_address">加载中...</div>
 			</div>
@@ -308,7 +308,7 @@
 			var stateList = []; //矿机状态列表
 			var millList; // 矿机列表
 			var millListData = []; //矿机列表（数组）
-			var balanceTotal = 0; // 收益总和
+			// var balanceTotal = 0; // 收益总和
 			var millName;// 矿机名称
 			var loadingList = "";
 			var addressState = undefined; // 矿机地址状态
@@ -429,6 +429,7 @@
 			    $("#cart_list").on("click", ".seek_deatil", function() {
 			    	$("#seek_deatil_address").html($(this).attr("address"));
 			    	$("#seek_deatil_balance").html($(this).attr("income"));
+			    	$("#history_detail_balance").html($(this).attr("history"));
 					mui('.detail_box').popover('toggle');
 					currentId = $(this).attr("uuid");
 				});
@@ -593,8 +594,9 @@
 							mui.toast('加载成功');
 							millList = ret.data; //矿机列表
 							millListData = ret.data.list; // 矿机列表（数组）
-							balanceTotal = ret.data.totalProfit; // 总收益
-							$('#balance').html(balanceTotal);
+						    // balanceTotal = ret.data.user.historyProfit.toFixed(2); // 历史总收益
+							$('#balance').html(ret.data.user.historyProfit.toFixed(2));  // 历史总收益
+							$('#balanceCNY').html(ret.data.user.yesterdayProfit.toFixed(2))  // 昨日收益
 							// 绑定钱包
 							if (addressState == 1){
 //								alert(addressState);
@@ -860,7 +862,7 @@
 										'<div class="miner_content">' +
 											'<ul class="miner_income">' +
 												'<li>' +
-													'<h6>' + '收益（DCAR/day）' + '</h6>' +
+													'<h6>' + '今日收益（DCAR/day）' + '</h6>' +
 													'<p>' + t.balance + '</p>' +
 												'</li>' +
 												'<li>' +
@@ -873,7 +875,7 @@
 											'<p class="deleteWallet" uuid="'+ t.uuid +'" number="'+ t._id +'">' +                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
 												'<i class="iconfont icon-qianbao" style="font-size: 16px;"></i>' + '解绑钱包' +
 											'</p>' +
-											'<p class="seek_deatil" income="'+ t.balance +'" address="'+ t.address +'" name="'+ t.name +'" uuid="'+ t.uuid +'">' +
+											'<p class="seek_deatil" history="'+ t.historyProfit +'" income="'+ t.balance +'" address="'+ t.address +'" name="'+ t.name +'" uuid="'+ t.uuid +'">' +
 												'<i class="iconfont icon-xiangqing"></i>' + '查看详情' +
 											'</p>' +
 										'</div>' +
