--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 						}
 					});
 					plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
+					plus.webview.getWebviewById("pages/property.html").evalJS("showEthPurse()");
 				})
 			});
 			mui(".mui-bar-tab").on("tap", "a", function(e) {
