--- a/pages/home.html
+++ b/pages/home.html
@@ -22,7 +22,7 @@
 				<!-- 第一张 -->
 				<div class="mui-slider-item">
 					<a href="#">
-						<img src="../img/home/banner.png" />
+						<img src="https://www.dcar.xyz/static/img/banner.12633b8.png" />
 					</a>
 				</div>
 				<!-- 第二张 -->
