--- a/pages/property.html
+++ b/pages/property.html
@@ -262,8 +262,10 @@
 													+'<div class="mui-col-sm-3 mui-col-xs-3">'
 														+'<p>'
 															+'<span onclick="ethfreshen(' + i + ', event)" index = "'+i+'" address = "'+ t.address +'" class="freshen">刷新</span>'
-														+'</p >'
-														+'<p></p>'
+														+'</p>'
+														+'<p>'
+															+'<span>转账</span>'
+														+'</p>'
 													+'</div>'
 									});
 									$("#eth_purse").html(item)
@@ -294,7 +296,9 @@
 											+'<p>'
 												+'<span onclick="ethfreshen(' + i + ', event)" index = "'+i+'" address = "'+ t.address +'" class="freshen">刷新</span>'
 											+'</p >'
-											+'<p></p>'
+											+'<p>'
+												+'<span>转账</span>'
+											+'</p>'
 										+'</div>'
 						});
 						$("#eth_purse").html(item)
