--- a/users/transfer.html
+++ b/users/transfer.html
@@ -196,6 +196,9 @@
 						id: '/users/barcodeAddress.html',
 						waiting: {
 							autoShow: false,
+						},
+						extras: {
+							state: 'dcar'
 						}
 					});
 				})
